<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/payment_card_elevation"
    app:cardCornerRadius="@dimen/payment_card_corner_radius"
    android:backgroundTint="@color/background_color_payment_item">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/payment_card_constraint_margin">

        <TextView
            android:id="@+id/numTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/cardview_dark_background"
            android:text="@string/payment_card_n_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/idTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/cardview_dark_background"
            android:layout_marginStart="@dimen/payment_card_margin_start_textview"
            app:layout_constraintStart_toEndOf="@+id/numTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/cardview_dark_background"
            android:text="@string/payment_card_some_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numTextView" />

        <TextView
            android:id="@+id/amountTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_card_amount_title"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <TextView
            android:id="@+id/amountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/payment_card_margin_start_textview"
            android:text="@string/payment_card_some_amount_text"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintStart_toEndOf="@+id/amountTitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <TextView
            android:id="@+id/createdTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_card_created_title"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amountTitleTextView" />

        <TextView
            android:id="@+id/createdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/payment_card_margin_start_textview"
            android:text="@string/payment_card_some_test_date"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintStart_toEndOf="@+id/createdTitleTextView"
            app:layout_constraintTop_toTopOf="@+id/createdTitleTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>